loggers replaced with lombok, additional logging, further general service refactoring

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,3 +21,4 @@ keycloak.confidential-port=443
 server.error.include-stacktrace=always
 management.endpoints.web.exposure.include=info,health
 spring.cache.type=NONE
+logging.level.mops.gruppen2=trace
