"finish" service refactor + fix obvious bugs after refactor (everything should run pretty much)

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,24 +1,33 @@
-application.name=gruppen2
-logging.pattern.console=[${application.name}],%magenta(%-5level), %d{dd-MM-yyyy HH:mm:ss.SSS}, %highlight(%msg),%thread,%logger.%M%n
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:blogdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=false
-logging.level.org.springframework.jdbc.core=INFO
-keycloak.principal-attribute=preferred_username
-keycloak.auth-server-url=https://keycloak.cs.hhu.de/auth
-keycloak.realm=MOPS
-hhu_keycloak.token-uri=https://keycloak.cs.hhu.de/auth/realms/MOPS/protocol/openid-connect/token
-keycloak.resource=gruppenfindung
-keycloak.credentials.secret=fc6ebf10-8c63-4e71-a667-4eae4e8209a1
-keycloak.verify-token-audience=true
-keycloak.use-resource-role-mappings=true
-keycloak.autodetect-bearer-only=true
-keycloak.confidential-port=443
-server.error.include-stacktrace=always
-management.endpoints.web.exposure.include=info,health
-spring.cache.type=NONE
-logging.level.mops.gruppen2=trace
+# Logging
+logging.application.name                    = gruppen2
+logging.pattern.console                     = [${logging.application.name}], %magenta(%-5level), %d{dd-MM-yyyy HH:mm:ss.SSS},\t%blue(%msg)\n\t\t\t\t\t\t\t\t\t\t\t%thread,%logger.%M%n
+spring.output.ansi.enabled                  = always
+logging.level.mops.gruppen2                 = trace
+logging.level.org.springframework.jdbc.core = info
+
+# Database
+spring.datasource.platform                  = h2
+spring.datasource.driver-class-name         = org.h2.Driver
+spring.datasource.initialization-mode       = always
+spring.datasource.url                       = jdbc:h2:mem:blogdb
+spring.datasource.username                  = sa
+spring.datasource.password                  =
+spring.jpa.database-platform                = org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled                   = false
+
+# Security
+keycloak.principal-attribute                = preferred_username
+keycloak.auth-server-url                    = https://keycloak.cs.hhu.de/auth
+keycloak.realm                              = MOPS
+hhu_keycloak.token-uri                      = https://keycloak.cs.hhu.de/auth/realms/MOPS/protocol/openid-connect/token
+keycloak.resource                           = gruppenfindung
+keycloak.credentials.secret                 = fc6ebf10-8c63-4e71-a667-4eae4e8209a1
+keycloak.verify-token-audience              = true
+keycloak.use-resource-role-mappings         = true
+keycloak.autodetect-bearer-only             = true
+keycloak.confidential-port                  = 443
+
+# Misc
+server.error.include-stacktrace             = always
+management.endpoints.web.exposure.include   = info,health
+spring.cache.type                           = none
