add spring aop deps

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ pmd {
 }
 
 checkstyle {
-    toolVersion = "8.28"
+    toolVersion = "8.30"
     configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
     ignoreFailures = true
 }
@@ -72,8 +72,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.security.oauth:spring-security-oauth2:2.4.0.RELEASE'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     implementation 'org.keycloak:keycloak-spring-boot-starter:9.0.0'
     implementation 'org.keycloak.bom:keycloak-adapter-bom:9.0.0'
@@ -85,7 +88,7 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
 
