--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # Logging
 logging.application.name                    = gruppen2
-logging.pattern.console                     = [${logging.application.name}], %magenta(%-5level), %d{dd-MM-yyyy HH:mm:ss.SSS},\t%blue(%msg)\n\t\t\t\t\t\t\t\t\t\t\t%thread,%logger.%M%n
+logging.pattern.console                     = [${logging.application.name}], %magenta(%-5level), %d{dd-MM-yyyy HH:mm:ss.SSS},\t%blue(%msg)\t%thread,%logger.%M%n
 spring.output.ansi.enabled                  = always
 logging.level.mops.gruppen2                 = trace
 logging.level.org.springframework.jdbc.core = info
