--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,9 @@ tasks.withType(SpotBugsTask) {
 pmd {
     consoleOutput = true
     ignoreFailures = true
-    toolVersion = "6.21.0"
+    toolVersion = "6.22.0"
     rulePriority = 5
-    ruleSets = ["category/java/errorprone.xml",
-                "category/java/bestpractices.xml",
-                "category/java/security.xml",
-                "category/java/performance.xml",
-                "category/java/design.xml"]
+    ruleSetConfig = resources.text.fromFile(file("${rootDir}/config/pmd/ruleset.xml"))
 }
 
 checkstyle {
