--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,4 @@
 # Logging
-logging.application.name                    = gruppen2
-logging.pattern.console                     = [${logging.application.name}], %magenta(%-5level), %d{dd-MM-yyyy HH:mm:ss.SSS},\t%blue(%msg)\t%thread,%logger.%M%n
-spring.output.ansi.enabled                  = always
 logging.level.mops.gruppen2                 = info
 logging.level.org.springframework.jdbc.core = info
 
@@ -9,21 +6,9 @@ logging.level.org.springframework.jdbc.core = info
 spring.datasource.platform                  = mysql
 spring.datasource.driver-class-name         = com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode       = never
-spring.datasource.url                       = jdbc:mysql://dbmysql:3306/gruppen2
-spring.datasource.username                  = root
-spring.datasource.password                  = geheim
-
-# Security
-keycloak.principal-attribute                = preferred_username
-keycloak.auth-server-url                    = https://keycloak.cs.hhu.de/auth
-keycloak.realm                              = MOPS
-hhu_keycloak.token-uri                      = https://keycloak.cs.hhu.de/auth/realms/MOPS/protocol/openid-connect/token
-keycloak.resource                           = gruppenfindung
-keycloak.credentials.secret                 = fc6ebf10-8c63-4e71-a667-4eae4e8209a1
-keycloak.verify-token-audience              = true
-keycloak.use-resource-role-mappings         = true
-keycloak.autodetect-bearer-only             = true
-keycloak.confidential-port                  = 443
+spring.datasource.url                       = jdbc:mysql://dbmysql:3306/gruppen
+spring.datasource.username                  = gruppen
+spring.datasource.password                  = password
 
 # Misc
 management.endpoints.web.exposure.include   = info,health
