--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,28 @@
-spring.profiles.active = dev
+spring.profiles.active              = dev
 
+# Security
+#keycloak.principal-attribute        = preferred_username
+#keycloak.auth-server-url            = https://keycloak.cs.hhu.de/auth
+#keycloak.realm                      = MOPS
+#hhu_keycloak.token-uri              = https://keycloak.cs.hhu.de/auth/realms/MOPS/protocol/openid-connect/token
+#keycloak.resource                   = gruppenfindung
+#keycloak.credentials.secret         = fc6ebf10-8c63-4e71-a667-4eae4e8209a1
+#keycloak.verify-token-audience      = true
+#keycloak.use-resource-role-mappings = true
+#keycloak.autodetect-bearer-only     = true
+#keycloak.confidential-port          = 443
+keycloak.principal-attribute        = preferred_username
+keycloak.auth-server-url            = http://localhost:8082/auth
+keycloak.realm                      = Gruppen
+hhu_keycloak.token-uri              = http://localhost:8082/auth/realms/Gruppen/protocol/openid-connect/token
+keycloak.resource                   = gruppen-app
+keycloak.credentials.secret         = 1a13cd9e-5242-4c29-8c50-45ee53464010
+keycloak.verify-token-audience      = true
+keycloak.use-resource-role-mappings = true
+keycloak.autodetect-bearer-only     = true
+keycloak.confidential-port          = 443
+
+# Logging
+logging.application.name            = gruppen2
+logging.pattern.console             = [${logging.application.name}], %magenta(%-5level), %d{dd-MM-yyyy HH:mm:ss.SSS},\t%blue(%msg)\t%thread,%logger.%M%n
+spring.output.ansi.enabled          = always
