--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -10,6 +10,11 @@ spring.datasource.url                       = jdbc:mysql://dbmysql:3306/gruppen
 spring.datasource.username                  = gruppen
 spring.datasource.password                  = password
 
+# Security
+keycloak.auth-server-url                    = http://localhost:8082/auth
+hhu_keycloak.token-uri                      = http://localhost:8082/auth/realms/Gruppen/protocol/openid-connect/token
+
+
 # Misc
 management.endpoints.web.exposure.include   = info,health
 server.error.include-stacktrace             = always
