--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -11,8 +11,8 @@ spring.datasource.username                  = b4b665d39d0670
 spring.datasource.password                  = cc933ff7
 
 # Security
-keycloak.auth-server-url                    = http://localhost:8082/auth
-hhu_keycloak.token-uri                      = http://localhost:8082/auth/realms/Gruppen/protocol/openid-connect/token
+keycloak.auth-server-url                    = https://gruppenkeycloak.herokuapp.com/auth
+hhu_keycloak.token-uri                      = https://gruppenkeycloak.herokuapp.com/auth/realms/master/protocol/openid-connect/token
 
 
 # Misc
