--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.profiles.active              = dev
 #keycloak.autodetect-bearer-only     = true
 #keycloak.confidential-port          = 443
 keycloak.principal-attribute        = preferred_username
-keycloak.realm                      = Gruppen
+keycloak.realm                      = master
 keycloak.resource                   = gruppen-app
-keycloak.credentials.secret         = 1a13cd9e-5242-4c29-8c50-45ee53464010
+keycloak.credentials.secret         = f73354fd-614e-4e24-b801-a8d0f4abf531
 keycloak.verify-token-audience      = true
 keycloak.use-resource-role-mappings = true
 keycloak.autodetect-bearer-only     = true
