--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.profiles.active              = dev
 #keycloak.use-resource-role-mappings = true
 #keycloak.autodetect-bearer-only     = true
 #keycloak.confidential-port          = 443
+keycloak.auth-server-url            = https://gruppenkeycloak.herokuapp.com/auth
+hhu_keycloak.token-uri              = https://gruppenkeycloak.herokuapp.com/auth/realms/master/protocol/openid-connect/token
 keycloak.principal-attribute        = preferred_username
 keycloak.realm                      = master
 keycloak.resource                   = gruppen-app
