new keycloak realm

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ spring.profiles.active              = dev
 #keycloak.autodetect-bearer-only     = true
 #keycloak.confidential-port          = 443
 keycloak.auth-server-url            = https://gruppenkeycloak.herokuapp.com/auth
-hhu_keycloak.token-uri              = https://gruppenkeycloak.herokuapp.com/auth/realms/master/protocol/openid-connect/token
+hhu_keycloak.token-uri              = https://gruppenkeycloak.herokuapp.com/auth/realms/Gruppen/protocol/openid-connect/token
 keycloak.principal-attribute        = preferred_username
-keycloak.realm                      = master
+keycloak.realm                      = Gruppen
 keycloak.resource                   = gruppen-app
-keycloak.credentials.secret         = f73354fd-614e-4e24-b801-a8d0f4abf531
+keycloak.credentials.secret         = 9f8d3616-60d3-48ea-9d14-06ae9eeee5cb
 keycloak.verify-token-audience      = true
 keycloak.use-resource-role-mappings = true
 keycloak.autodetect-bearer-only     = true
