--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@ spring.profiles.active              = dev
 #keycloak.use-resource-role-mappings = true
 #keycloak.autodetect-bearer-only     = true
 #keycloak.confidential-port          = 443
-keycloak.auth-server-url            = https://gruppenkeycloak.herokuapp.com/auth
-hhu_keycloak.token-uri              = https://gruppenkeycloak.herokuapp.com/auth/realms/Gruppen/protocol/openid-connect/token
+keycloak.auth-server-url            = https://churl-keycloak.herokuapp.com/auth
+hhu_keycloak.token-uri              = https://churl-keycloak.herokuapp.com/auth/realms/gruppen/protocol/openid-connect/token
 keycloak.principal-attribute        = preferred_username
-keycloak.realm                      = Gruppen
+keycloak.realm                      = gruppen
 keycloak.resource                   = gruppen-app
-keycloak.credentials.secret         = 9f8d3616-60d3-48ea-9d14-06ae9eeee5cb
+keycloak.credentials.secret         = 2e2e5770-c454-4d31-be99-9d8c34c93089
 keycloak.verify-token-audience      = true
 keycloak.use-resource-role-mappings = true
 keycloak.autodetect-bearer-only     = true
